# ondrosachy

./: .gitignore  .gitlab-ci.yml  Board.cpp  Board.h  CMakeLists.txt  README.md  chess_engine_cpp  local_history.patch  main.cpp  space-ci.yml
Dokumentace/: czechiso.bst  document.bbl  document.blg  document.out  zdroje.bib
Dokumentace/LaTeX_Template/: czechiso.bst  dict-cs-2.oxt  document.bbl  document.blg  document.tex  document.te~  monapack.sty  zdroje.bib
latex/: main.tex  main.toc
src/: Board.cpp  Board.h  CMakeLists.txt  MoveGenerator.cpp  MoveGenerator.h  PgnParser.cpp  PgnParser.h  PrecomputedBitboards.cpp  PrecomputedBitboards.h  RandomGenerator.cpp  RandomGenerator.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  debug.cpp  debug.h  defs.h  eval.cpp  eval.h  graph.dot  gui_chess  main.cpp  print_dot_graph  sample.pgn
src/BitboardMaker/: CMakeLists.txt  bitboard_maker  main.cpp
src/BitboardMaker/src/: bitboard_maker
src/gui/: defs.h  main.cpp
src/off_topic_scripty/: generate_heatmap.py
src/src/: chess_engine_cpp  chess_tests  gui_chess  print_dot_graph
tests/: CMakeLists.txt  board_test.cpp  chess_tests  generate_dot_graph.cpp  peft.cpp
