#cmake_minimum_required(VERSION 3.2)
#project(chess_tests_exe)
#
#set(CMAKE_CXX_STANDARD 14)
#
## add_executable(main.cpp Board.h Board.cpp)
##set(source_files Board.h Board.cpp PgnParser.cpp PgnParser.h PrecomputedBitboards.h PrecomputedBitboards.cpp debug.cpp debug.h eval.h eval.cpp MoveGenerator.cpp MoveGenerator.h)
#add_executable(peft.cpp catch.hpp catch.cpp ${source_files})
